# quadris

./: .gitignore  AUTHORS  CMakeLists.txt  Doxyfile  Makefile  README.md  test
src/: Block.cc  Block.h  Board.cc  Board.h  BoardInitArgs.h  Cell.cc  Cell.h  Command.cc  Command.h  CommandInterpreter.cc  CommandInterpreter.h  CommandLineArguments.cc  CommandLineArguments.h  Display.cc  Display.h  Event.h  Gtk.h  Level.cc  Level.h  Optional.h  Position.cc  Position.h  QdDefs.h  Score.cc  Score.h  Utility.h  X11.h  main.cc  window.cc  window.h
src/Block/: Block.h  BlockJ.h  BlockL.h  BlockS.h  BlockT.h
src/Blocks/: BlockI.cc  BlockI.h  BlockJ.cc  BlockJ.h  BlockL.cc  BlockL.h  BlockO.cc  BlockO.h  BlockS.cc  BlockS.h  BlockT.cc  BlockT.h  BlockZ.cc  BlockZ.h
src/Cell/: Cell.h
src/CommandInterpreter/: CommandInterpreter.h
src/Display/: TextDisplay.h
src/Displays/: GraphicDisplay.cc  GraphicDisplay.h  TextDisplay.cc  TextDisplay.h
src/Level/: Level.h  Level1.h
src/Levels/: BaseLevel.cc  BaseLevel.h  Hint.cc  Level0.cc  Level0.h  Level1.cc  Level1.h  Level2.cc  Level2.h  Level3.cc  Level3.h  Level4.cc  Level4.h  SequencedBaseLevel.cc  SequencedBaseLevel.h
uml/: uml.mdj
week-1/: uml.mdj
week-2/: UML_Updated.mdj  uml.mdj
